--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mathe_Spiel_rev02</string>
+    <string name="spielend_lernen">Spielend lernen</string>
+    <string name="mr_x_spielen">Mr.X spielen</string>
+    <string name="landeshauptst_dte">Landeshauptstädte</string>
 </resources>
